# VoxiGen

./: .clang-format  .gitmodules  CMakeLists.txt  build.sh  game_run.sh
assets/shader/: test.glsl
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: main.cpp  main.h  types.h
src/modules/: file_io.cpp  file_io.h  game_window.cpp  game_window.h  logger.cpp  logger.h  messenger.cpp  messenger.h  platform.cpp  platform.h  renderer.cpp  renderer.h
src/render/: shader.cpp  shader.h
